# transfer-genie

./: .env.example  AGENTS.md  Cargo.toml  README.md  patch_main.js  tauri.conf.json
.github/workflows/: release.yml  sync-gitee-release.yml
capabilities/: default.json
docs/: GitHub Releases 自动更新发布指南.md  HTTP API 说明.md  Self-hosted Runner 配置指南.md  Telegram Bridge 说明.md  setup.md  telegram-bridge.md  自动更新方案.md
examples/: telegram-bridge.json
frontend/: index.html  main.js  styles.css
icons/: icon.icns
openspec/changes/add-config-import-export/: proposal.md
openspec/changes/add-desktop-auto-update/: design.md  proposal.md  tasks.md
openspec/changes/add-download-actions/: design.md  tasks.md
openspec/changes/add-image-preview-on-upload/: tasks.md
openspec/changes/add-image-thumbnails-and-preview/: proposal.md  tasks.md
openspec/changes/add-markdown-message-support/: proposal.md
openspec/changes/add-marked-bulk-actions/: proposal.md
openspec/changes/add-message-controls/: design.md  tasks.md
openspec/changes/add-multiple-webdav-endpoints/: design.md  tasks.md
openspec/changes/add-send-marked-tags/: design.md  tasks.md
openspec/changes/add-telegram-bridge-service/: design.md  proposal.md  tasks.md
openspec/changes/add-tray-update-check/: proposal.md  tasks.md
openspec/changes/add-webdav-backup-restore/: proposal.md  tasks.md
openspec/changes/add-webdav-transfer-client/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-09-add-download-actions/: proposal.md
openspec/changes/archive/2026-01-09-add-webdav-transfer-client/: design.md  tasks.md
openspec/changes/archive/2026-01-10-add-config-import-export/: tasks.md
openspec/changes/archive/2026-01-10-add-message-controls/: proposal.md  tasks.md
openspec/changes/archive/2026-01-10-add-multiple-webdav-endpoints/: proposal.md
openspec/changes/archive/2026-01-15-add-message-marking/: proposal.md  tasks.md
openspec/changes/archive/2026-01-15-optimize-webdav-backup-restore/: design.md  tasks.md
openspec/changes/archive/2026-01-16-add-markdown-message-support/: tasks.md
openspec/changes/archive/2026-03-25-add-marked-bulk-actions/: tasks.md
openspec/changes/archive/2026-03-25-add-marked-list-search/: proposal.md  tasks.md
openspec/changes/archive/2026-03-25-add-transfer-list-pagination/: proposal.md  (+1 more)
openspec/changes/optimize-webdav-backup-restore/: proposal.md
openspec/changes/simplify-http-tag-names/: design.md
openspec/changes/update-configurable-global-hotkey/: proposal.md  tasks.md
openspec/changes/update-file-upload-selection/: proposal.md
openspec/changes/update-readme-and-add-homepage/: design.md  proposal.md  tasks.md
openspec/changes/update-tray-selection-cleanup/: proposal.md  tasks.md
openspec/specs/app-shell/: spec.md
openspec/specs/client-settings/: spec.md
openspec/specs/message-feed/: spec.md
scripts/: release_github.sh  update_local_exe.bat
scripts/mac/: README.md  enhance-dmg.sh  fix-quarantine.sh
scripts/release/: release.sh  release_github.sh  release_sync_gitee.py
src/: db.rs  filenames.rs  history.rs  main.rs  telegram_bridge.rs  types.rs  webdav.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  main.rs  types.rs  webdav.rs
tests/: test_local_http_api.js
(+57 files in other folders)
