[package]
name = "transfer-genie"
version = "0.1.13"
edition = "2021"
license = "AGPL-3.0-or-later"
default-run = "transfer-genie"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
base64 = "0.21"
pbkdf2 = "0.12"
sha2 = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream", "blocking", "multipart"] }
quick-xml = "0.31"
url = "2.5"
percent-encoding = "2.3"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros"] }
thiserror = "1.0"
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
futures-util = "0.3"
bytes = "1"
zip = { version = "2.1.3", features = ["deflate"] }
async-recursion = "1.1.1"
log = "0.4.29"
tauri-plugin-log = { version = "2.8.0", features = ["colored"] }
image = "0.24"
time = "0.3"
axum = { version = "0.7", features = ["multipart"] }

urlencoding = "2.1.3"
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2.10.0"

[target."cfg(target_os = \"windows\")".dependencies]
winreg = "0.52"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
