[package]
name = "transfer-genie"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
base64 = "0.21"
pbkdf2 = "0.12"
sha2 = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
quick-xml = "0.31"
url = "2.5"
percent-encoding = "2.3"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros"] }
thiserror = "1.0"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
futures-util = "0.3"
bytes = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
